--- a/bringoz_drivers/package.json
+++ b/bringoz_drivers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-jwt-auth",
+  "name": "bringoz-drivers",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "http-server": "^0.12.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
