--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
 spring.datasource.url=jdbc:derby://localhost/myDB;create=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
 
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=sa
 spring.datasource.password=password
 
